--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,10 +1,20 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap");
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
+}
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
   .container {
-    padding: 20px 30px;
+    margin: 0 30px;
+    height: auto;
   }
   .card {
     border-radius: 10px;
